# codearkt

./: .flake8  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  test_manager_agent.py
.github/workflows/: docker.yml  python.yml
codearkt/: client.py  codeact.py  event_bus.py  gradio.py  llm.py  mcp_client.py  mcp_server.py  otel.py  python_executor.py  server.py  session.py  terminal.py  tools.py  util.py
codearkt/prompts/: codeact.yaml  default.yaml
container/: Dockerfile  app.py  requirements.txt  tools.py
examples/: client.py
examples/multi_agent/: agent.py  agents.py  librarian.yaml  run.py
examples/multi_agent/prompts/: librarian.yaml
examples/simple_agent/: agent.py  agents.py  run.py  run_mcp.py
tests/: conftest.py  test_codeact.py  test_event_bus.py  test_llm.py  test_python_executor.py  test_server.py  test_util.py
