[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codearkt"
version = "0.0.5"
description = "CodeAct implementation with Docker and MCP"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ilya Gusev", email = "phoenixilya@gmail.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "academia-mcp>=0.0.7",
    "arize-phoenix-otel>=0.12.1",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fastmcp>=2.9.1",
    "gradio==5.29.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "mcp==1.10.1",
    "openai>=1.93.0",
    "openinference-instrumentation-openai>=0.1.30",
    "pillow>=11.3.0",
    "pytest-asyncio>=1.0.0",
    "types-docker>=7.1.0.20250523",
    "types-pyyaml>=6.0.12.20250516",
    "uvicorn>=0.34.3",
    "wsproto>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/IlyaGusev/codearkt"

[tool.setuptools.packages.find]
where = ["."]
include = ["codearkt*"]
exclude = ["container*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pydantic.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"codearkt" = ["prompts/*.yaml"]
